:memo: Testando a conexao

--- a/Web Scrapping/Aula 4/site.html
+++ b/Web Scrapping/Aula 4/site.html
@@ -54,7 +54,7 @@
         <tr>
             <td>Ana</td>
             <td>28</td>
-            <td>Engenheira</td>
+            <td>Arquiteta</td>
         </tr>
         <tr>
             <td>João</td>
